--- a/Blog -ASP.NET MVC Practical Project/Views/Posts/Create.cshtml
+++ b/Blog -ASP.NET MVC Practical Project/Views/Posts/Create.cshtml
@@ -30,14 +30,14 @@
                 @Html.ValidationMessageFor(model => model.Body, "", new { @class = "text-danger" })
             </div>
         </div>
-
+        @*// this is a working date field , you can edint it to create another , but this one is probably for date!
         <div class="form-group">
             @Html.LabelFor(model => model.Date, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.Date, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.Date, "", new { @class = "text-danger" })
             </div>
-        </div>
+        </div>*@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
