--- a/Blog -ASP.NET MVC Practical Project/Views/Posts/Create.cshtml
+++ b/Blog -ASP.NET MVC Practical Project/Views/Posts/Create.cshtml
@@ -30,7 +30,7 @@
                 @Html.ValidationMessageFor(model => model.Body, "", new { @class = "text-danger" })
             </div>
         </div>
-        @*// this is a working date field , you can edint it to create another , but this one is probably for date!
+        @*//BYME this is a working date field , you can edint it to create another , but this one is probably for date!
         <div class="form-group">
             @Html.LabelFor(model => model.Date, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
