--- a/Blog -ASP.NET MVC Practical Project/Views/Account/Register.cshtml
+++ b/Blog -ASP.NET MVC Practical Project/Views/Account/Register.cshtml
@@ -37,6 +37,45 @@
             @Html.TextBoxFor(m => m.FullName, new { @class = "form-control" })
         </div>
     </div>
+    //neeew
+    <div class="form-group">
+        @Html.LabelFor(m => m.Division, new { @class = "col-md-2 control-label" })
+        <div class="col-md-10">
+            @Html.TextBoxFor(m => m.Division, new { @class = "form-control" })
+            @*@Html.DropDownList(m => m.Division, new { @class = "form-control" })*@
+            @*@Html.DropDownList(Html.DropDownListFor(
+           model => model.Division,
+           new SelectList(
+                  new List<Object>{
+                       new { value = 0 , text = "Unranked"  },
+                       new { value = 1 , text = "Bronze" },
+                       new { value = 2 , text = "Silver"},
+                       new { value = 2 , text = "Gold"},
+                       new { value = 2 , text = "Platinum"},
+                       new { value = 2 , text = "Diamond"},
+                       new { value = 2 , text = "Challenger"}
+                    },
+                  "value",
+                  "text",
+                   Model.Division
+           )
+        ))*@
+            @*BYME TRYED TO CREATE DROPDOWN LIST FOR DIVISIONS HERE*@
+        </div>
+    </div>
+    <div class="form-group">
+        @Html.LabelFor(m => m.Server, new { @class = "col-md-2 control-label" })
+        <div class="col-md-10">
+            @Html.TextBoxFor(m => m.Server, new { @class = "form-control" })
+        </div>
+    </div>
+    <div class="form-group">
+        @Html.LabelFor(m => m.Brotherhood, new { @class = "col-md-2 control-label" })
+        <div class="col-md-10">
+            @Html.TextBoxFor(m => m.Brotherhood, new { @class = "form-control" })
+        </div>
+    </div>
+    //neeew
     <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
             <input type="submit" class="btn btn-default" value="Register" />
