Generating the users view
Generated users view by creating new scuffold item.
The code crashed , so saving last stable version.

--- a/Blog -ASP.NET MVC Practical Project/Views/Home/Index.cshtml
+++ b/Blog -ASP.NET MVC Practical Project/Views/Home/Index.cshtml
@@ -10,7 +10,7 @@
 <section class="row">
     @foreach (var post in Model)
     { 
-        <article class="post col-md-4"> @*BYME screein is 12/12 , md is 4 here , which means there is space for 3 posts *@
+        <article class="post col-md-3"> @*BYME screein is 12/12 , md is 4 here , which means there is space for 3 posts *@
             <h2 class="title"><a href="/Posts/Details/@post.Id"> @Blog__ASP.NET_MVC_Practical_Project.Classes___Aditional.Utils.CutText(post.Title, 50)</a></h2>
             <div>
                 Created on <i>@post.Date</i>
@@ -20,7 +20,7 @@
                 }
             </div>
             <div class="body">
-                @Blog__ASP.NET_MVC_Practical_Project.Classes___Aditional.Utils.CutText(post.Body,200) @*BYME edit post lenght here*@
+                @(Html.Raw(Blog__ASP.NET_MVC_Practical_Project.Classes___Aditional.Utils.CutText(post.Body,200))) @*BYME edit post lenght here*@
             </div>
 
             @* this is added by myself : *@
