--- a/Blog -ASP.NET MVC Practical Project/Views/Shared/_Layout.cshtml
+++ b/Blog -ASP.NET MVC Practical Project/Views/Shared/_Layout.cshtml
@@ -21,9 +21,10 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Home", "Index", "Home")</li>
+                    @*<li>@Html.ActionLink("Home", "Index", "Home")</li>*@
                     <li>@Html.ActionLink("Guides", "Index", "Posts")</li>
                     <li>@Html.ActionLink("New Guide", "Create", "Posts")</li>
+                    <li>@Html.ActionLink("Summoners", "Index", "Users")</li>
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
