--- a/Blog -ASP.NET MVC Practical Project/Views/Users/Details.cshtml
+++ b/Blog -ASP.NET MVC Practical Project/Views/Users/Details.cshtml
@@ -11,7 +11,7 @@
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.FullName)
+            Summoner Name
         </dt>
 
         <dd>
@@ -50,7 +50,7 @@
             @Html.DisplayFor(model => model.Email)
         </dd>
 
-        <dt>
+        @*<dt>
             @Html.DisplayNameFor(model => model.EmailConfirmed)
         </dt>
 
@@ -120,19 +120,20 @@
 
         <dd>
             @Html.DisplayFor(model => model.AccessFailedCount)
-        </dd>
+        </dd>*@
 
-        <dt>
+        @*<dt>
             @Html.DisplayNameFor(model => model.UserName)
         </dt>
 
         <dd>
             @Html.DisplayFor(model => model.UserName)
-        </dd>
+        </dd>*@
 
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
+ @*@Html.ActionLink("Edit", "Edit", new { id = Model.Id })*@ 
+    
     @Html.ActionLink("Back to List", "Index")
 </p>
