--- a/Blog -ASP.NET MVC Practical Project/Views/Users/Index.cshtml
+++ b/Blog -ASP.NET MVC Practical Project/Views/Users/Index.cshtml
@@ -4,11 +4,11 @@
     ViewBag.Title = "Index";
 }
 
-<h2>Index</h2>
+<h2>Summoners registered</h2>
 
-<p>
+@*<p>
     @Html.ActionLink("Create New", "Create")
-</p>
+</p>*@
 <table class="table">
     <tr>
         <th>
@@ -26,7 +26,7 @@
         <th>
             @Html.DisplayNameFor(model => model.Email)
         </th>
-        <th>
+        @*<th>
             @Html.DisplayNameFor(model => model.EmailConfirmed)
         </th>
         <th>
@@ -55,7 +55,7 @@
         </th>
         <th>
             @Html.DisplayNameFor(model => model.UserName)
-        </th>
+        </th>*@
         <th></th>
     </tr>
 
@@ -76,7 +76,7 @@
         <td>
             @Html.DisplayFor(modelItem => item.Email)
         </td>
-        <td>
+        @*<td>
             @Html.DisplayFor(modelItem => item.EmailConfirmed)
         </td>
         <td>
@@ -105,11 +105,15 @@
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.UserName)
-        </td>
+        </td>*@
         <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
-            @Html.ActionLink("Details", "Details", new { id=item.Id }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.Id })
+@if (User.IsInRole("Administrators") || (item.UserName != null && User.Identity.Name == item.UserName))
+{
+    @Html.ActionLink("Edit", "Edit", new { id = item.Id }) @:|
+                }
+            @*@Html.ActionLink("Edit", "Edit", new { id=item.Id }) |*@
+            @Html.ActionLink("Details", "Details", new { id=item.Id }) @*|*@
+            @*@Html.ActionLink("Delete", "Delete", new { id=item.Id })*@
         </td>
     </tr>
 }
