--- a/Blog -ASP.NET MVC Practical Project/Views/Posts/Details.cshtml
+++ b/Blog -ASP.NET MVC Practical Project/Views/Posts/Details.cshtml
@@ -4,14 +4,13 @@
     ViewBag.Title = "Details";
 }
 
-<h2>Details</h2>
+<h2>Guide</h2>
 
 <div>
     <h4>Post</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.Title)
         </dt>
 
         <dd>
@@ -19,11 +18,12 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.Body)
+            @*@Html.DisplayNameFor(model => model.Body)*@
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Body)
+            <textarea class="form-control text-box multi-line valid" disabled="disabled">@Model.Body</textarea>
+            @*@Html.DisplayFor(model => model.Body)*@
         </dd>
 
         <dt>
