--- a/Blog -ASP.NET MVC Practical Project/Views/Users/Index.cshtml
+++ b/Blog -ASP.NET MVC Practical Project/Views/Users/Index.cshtml
@@ -26,6 +26,9 @@
         <th>
             @Html.DisplayNameFor(model => model.Email)
         </th>
+        <th>
+            Guides
+        </th>
         @*<th>
             @Html.DisplayNameFor(model => model.EmailConfirmed)
         </th>
@@ -75,6 +78,9 @@
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.Email)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem =>item.PostsCount)
         </td>
         @*<td>
             @Html.DisplayFor(modelItem => item.EmailConfirmed)
