--- a/Blog -ASP.NET MVC Practical Project/Content/Site.css
+++ b/Blog -ASP.NET MVC Practical Project/Content/Site.css
@@ -1,6 +1,7 @@
 ﻿body {
     padding-top: 50px;
     padding-bottom: 20px;
+    background-image: url(../Content/images/lgbackgroud.png);
 }
 
 /* Set padding to keep content from hitting the edges */
@@ -20,9 +21,9 @@
 input,
 select,
 textarea {
-    max-width: 280px;
+    max-width: 600px;
 }
 
 .post {
-    background-color: #EEE;
+    background-color: #4cff00;
 }
