--- a/Blog -ASP.NET MVC Practical Project/Content/Site.css
+++ b/Blog -ASP.NET MVC Practical Project/Content/Site.css
@@ -1,13 +1,24 @@
 ﻿body {
     padding-top: 50px;
     padding-bottom: 20px;
-    background-image: url(../Content/images/lgbackgroud.png);
+    background-image: url(../Content/lgbackground.png);
+    background-size: 100%;
+    background-repeat: no-repeat;
+    background-color: black;
 }
+
+
+/*@media screen and (max-width: 1024px) {*/ /* Specific to this particular image */
+  /*img.bg {
+    left: 50%;
+    margin-left: -512px;   /* 50% */
+  /*}
+}*/
 
 /* Set padding to keep content from hitting the edges */
 .body-content {
-    padding-left: 15px;
-    padding-right: 15px;
+    /*padding-left: 15px;
+    padding-right: 15px;*/
 }
 
 /* Override the default bootstrap behavior where horizontal description lists 
@@ -21,9 +32,42 @@
 input,
 select,
 textarea {
-    max-width: 600px;
+    /*max-width: 600px;*/
 }
 
 .post {
-    background-color: #4cff00;
+    color:palegoldenrod;
+
+}
+.newmain{
+    margin-top:auto;
+    margin-bottom:auto;
+    margin-left:20%;
+    margin-right:20%; 
+    /*background-image: url(../Content/woodbackground.png);
+    background-size:cover;*/
+     
+}
+.alltext{
+    color:palegoldenrod;
+
+}
+.mainhead{
+    color:darkkhaki;
+    margin-top:auto;
+    margin-bottom:auto;
+    margin-left:20%;
+    margin-right:20%; 
+}
+.tittle{
+    color:darkkhaki;
+}
+/*.smallermargin{
+    margin-top:auto;
+    margin-bottom:auto;
+    margin-left:15%;
+    margin-right:15%;
+}*/
+.table{
+color:palegoldenrod;
 }
