--- a/Blog -ASP.NET MVC Practical Project/Views/MyPosts/Details.cshtml
+++ b/Blog -ASP.NET MVC Practical Project/Views/MyPosts/Details.cshtml
@@ -4,42 +4,44 @@
     ViewBag.Title = "Details";
 }
 
-<h2>Guide</h2>
+<div class="newmain">
+    <h2>Guide</h2>
 
-<div>
-    <h4>Post</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-        </dt>
+    <div>
+        <h4>Post</h4>
+        <hr />
+        <dl class="dl-horizontal">
+            <dt>
+            </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.Title)
-        </dd>
+            <dd>
+                @Html.DisplayFor(model => model.Title)
+            </dd>
 
-        <dt>
-            @*@Html.DisplayNameFor(model => model.Body)*@
-        </dt>
+            <dt>
+                @*@Html.DisplayNameFor(model => model.Body)*@
+            </dt>
 
-        <dd>
-            <textarea class="form-control text-box multi-line valid" disabled="disabled">@Model.Body</textarea>
-            @*@Html.DisplayFor(model => model.Body)*@
-        </dd>
+            <dd>
+                <textarea class="form-control text-box multi-line valid" disabled="disabled">@Model.Body</textarea>
+                @*@Html.DisplayFor(model => model.Body)*@
+            </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Date)
-        </dt>
+            <dt>
+                @Html.DisplayNameFor(model => model.Date)
+            </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.Date)
-        </dd>
+            <dd>
+                @Html.DisplayFor(model => model.Date)
+            </dd>
 
-    </dl>
-</div>
-<p>
-    @if (User.IsInRole("Administrators"))
+        </dl>
+    </div>
+    <p>
+        @if (User.IsInRole("Administrators"))
             {
-        @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) @:|
+            @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) @:|
             }
-    @Html.ActionLink("Back to List", "Index")
-</p>
+        @Html.ActionLink("Back to List", "Index")
+    </p>
+    </div>
