--- a/Blog -ASP.NET MVC Practical Project/Views/MyPosts/Index.cshtml
+++ b/Blog -ASP.NET MVC Practical Project/Views/MyPosts/Index.cshtml
@@ -3,75 +3,83 @@
 @{
     ViewBag.Title = "Index";
 }
+<div class="newmain">
+    <h2>My Posts</h2>
 
-<h2>My Posts</h2>
+    @*<p>
+            @Html.ActionLink("Create New", "Create")
+        </p>*@
+    <table class="table">
+        <tr>
+            <th>
+                @Html.DisplayNameFor(model => model.Title)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Body)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Date)
+            </th>
+            @*<th>
+                    @Html.DisplayNameFor(model => model.Author.FullName)
+                </th>*@
+            @*<th>
+                    @Html.DisplayNameFor(model => model.CommentsCount)
+                </th>*@
+            <th></th>
+        </tr>
 
-@*<p>
-        @Html.ActionLink("Create New", "Create")
-    </p>*@
-<table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.Title)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Body)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Date)
-        </th>
-        @*<th>
-                @Html.DisplayNameFor(model => model.Author.FullName)
-            </th>*@
-        @*<th>
-                @Html.DisplayNameFor(model => model.CommentsCount)
-            </th>*@
-        <th></th>
-    </tr>
-   
-    @foreach (var item in Model)
-    {
-        if (User.Identity.Name == item.Author.UserName)
+        @foreach (var item in Model)
         {
-            <tr>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Title)
-                </td>
-                <td>
-                    @Html.Raw(Blog__ASP.NET_MVC_Practical_Project.Classes___Aditional.Utils.CutText(item.Body, 300))
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Date)
-                </td>
-                @*<td>
-                        @if (item.Author == null)
-                        {
-                            <i> No Author </i>
-                        }
-                        @Html.DisplayFor(modelItem => item.Author.FullName)
-                    </td>*@
-                @*<td>
-                        @Html.DisplayFor(modelItem => item.CommentsCount)
-                    </td>*@
-
-                <td>
-                    @if (User.IsInRole("Administrators") || (item.Author != null && User.Identity.Name == item.Author.UserName))
+            if (User.Identity.Name == item.Author.UserName)
+            {
+                <tr>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Title)
+                    </td>
+                    <td>
+                        @Html.Raw(Blog__ASP.NET_MVC_Practical_Project.Classes___Aditional.Utils.CutText(item.Body, 300))
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Date)
+                    </td>
+                    @*<td>
+                            @if (item.Author == null)
+                            {
+                                <i> No Author </i>
+                            }
+                            @Html.DisplayFor(modelItem => item.Author.FullName)
+                        </td>*@
+                    @*<td>
+                            @Html.DisplayFor(modelItem => item.CommentsCount)
+                        </td>*@
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td>
+                        @if (User.IsInRole("Administrators") || (item.Author != null && User.Identity.Name == item.Author.UserName))
                     {
-                        @Html.ActionLink("Edit", "Edit", new { id = item.Id }) @:|
+                            @Html.ActionLink("Edit", "Edit", new { id = item.Id }) @:|
             }
 
-                    @Html.ActionLink("Details", "Details", new { id = item.Id })
-                    @if (User.IsInRole("Administrators") || (item.Author != null && User.Identity.Name == item.Author.UserName))
+                        @Html.ActionLink("Details", "Details", new { id = item.Id })
+                        @if (User.IsInRole("Administrators") || (item.Author != null && User.Identity.Name == item.Author.UserName))
                     {
-                        @:| @Html.ActionLink("Delete", "Delete", new { id = item.Id })
+                            @:| @Html.ActionLink("Delete", "Delete", new { id = item.Id })
             }
-                </td>
-            </tr>
+                    </td>
+                </tr>
+            }
         }
-    }
 
-</table>
+    </table>
+    </div>
 
 
-
- 
