More wokrs on frontend
Removing stupid <h2>,generated everywhere.Added a background to the post
text box, but looks kinda bad

--- a/Blog -ASP.NET MVC Practical Project/Views/MyPosts/Details.cshtml
+++ b/Blog -ASP.NET MVC Practical Project/Views/MyPosts/Details.cshtml
@@ -23,8 +23,9 @@
             </dt>
 
             <dd>
-                <textarea class="form-control text-box multi-line valid" disabled="disabled">@Model.Body</textarea>
+                @*<textarea class="form-control text-box multi-line valid" disabled="disabled">@Model.Body</textarea>*@
                 @*@Html.DisplayFor(model => model.Body)*@
+                @(Html.Raw(Blog__ASP.NET_MVC_Practical_Project.Classes___Aditional.Utils.CutText(Model.Body, 100000)))
             </dd>
 
             <dt>
