--- a/Blog -ASP.NET MVC Practical Project/Views/MyPosts/Index.cshtml
+++ b/Blog -ASP.NET MVC Practical Project/Views/MyPosts/Index.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Index";
 }
 <div class="newmain">
-    <h2>My Posts</h2>
+    <h2>My Guides</h2>
 
     @*<p>
             @Html.ActionLink("Create New", "Create")
@@ -15,7 +15,7 @@
                 @Html.DisplayNameFor(model => model.Title)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Body)
+                Content
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Date)
