--- a/Blog -ASP.NET MVC Practical Project/Views/Shared/_Layout.cshtml
+++ b/Blog -ASP.NET MVC Practical Project/Views/Shared/_Layout.cshtml
@@ -22,10 +22,10 @@
                 <div class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
                         @*<li>@Html.ActionLink("Home", "Index", "Home")</li>*@
-                        <li>@Html.ActionLink("Guides", "Index", "Posts")</li>
-                        <li>@Html.ActionLink("My Guides", "Index", "MyPosts")</li>
-                        <li>@Html.ActionLink("New Guide", "Create", "Posts")</li>
-                        <li>@Html.ActionLink("Summoners", "Index", "Users")</li>
+                        <li class="alltext">@Html.ActionLink("Guides", "Index", "Posts")</li>
+                        <li class="alltext">@Html.ActionLink("My Guides", "Index", "MyPosts")</li>
+                        <li class="alltext">@Html.ActionLink("New Guide", "Create", "Posts")</li>
+                        <li class="alltext">@Html.ActionLink("Summoners", "Index", "Users")</li>
                     </ul>
                     @Html.Partial("_LoginPartial")
                 </div>
