--- a/Blog -ASP.NET MVC Practical Project/Content/Site.css
+++ b/Blog -ASP.NET MVC Practical Project/Content/Site.css
@@ -1,4 +1,5 @@
-﻿body {
+﻿
+body {
     padding-top: 50px;
     padding-bottom: 20px;
     background-image: url(../Content/lgbackground.png);
@@ -44,6 +45,7 @@ textarea {
     margin-bottom:auto;
     margin-left:20%;
     margin-right:20%; 
+    color:palegoldenrod;
     /*background-image: url(../Content/woodbackground.png);
     background-size:cover;*/
      
@@ -71,3 +73,27 @@ textarea {
 .table{
 color:palegoldenrod;
 }
+.big-form-control{
+    width:100%;
+    height:400px;
+    background-image: url(../Content/paper.png);
+    background-size: 100%;
+    background-repeat: repeat-y;
+    font-size:200%;
+}
+.form-control{
+    background-color:#d4b94d;
+    font:bold;
+    font:italic;
+}
+
+
+
+
+
+
+
+
+
+
+
