--- a/Blog -ASP.NET MVC Practical Project/Views/Posts/Create.cshtml
+++ b/Blog -ASP.NET MVC Practical Project/Views/Posts/Create.cshtml
@@ -16,7 +16,8 @@
             <hr />
             @Html.ValidationSummary(true, "", new { @class = "text-danger" })
             <div class="form-group">
-                @Html.LabelFor(model => model.Title, htmlAttributes: new { @class = "control-label col-md-2" })
+                @*@Html.LabelFor(model => model.Title, htmlAttributes: new { @class = "control-label col-md-2" })*@
+                <span class="control-label col-md-2"><b>Guide Title</b></span>
                 <div class="col-md-10">
                     @Html.EditorFor(model => model.Title, new { htmlAttributes = new { @class = "form-control" } })
                     @Html.ValidationMessageFor(model => model.Title, "", new { @class = "text-danger" })
@@ -24,9 +25,9 @@
             </div>
 
             <div class="form-group">
-                @Html.LabelFor(model => model.Body, htmlAttributes: new { @class = "control-label col-md-2" })
+                <span class="control-label col-md-2"><b>Guide</b></span>
                 <div class="col-md-10">
-                    @Html.EditorFor(model => model.Body, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.EditorFor(model => model.Body, new { htmlAttributes = new { @class = "big-form-control" } })
                     @Html.ValidationMessageFor(model => model.Body, "", new { @class = "text-danger" })
                 </div>
             </div>
