--- a/Blog -ASP.NET MVC Practical Project/Views/Posts/Index.cshtml
+++ b/Blog -ASP.NET MVC Practical Project/Views/Posts/Index.cshtml
@@ -15,17 +15,17 @@
                 @Html.DisplayNameFor(model => model.Title)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Body)
+                Content
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Date)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Author.FullName)
+                Summoner
             </th>
-            @*<th>
-                    @Html.DisplayNameFor(model => model.CommentsCount)
-                </th>*@
+            <th>
+Actions
+                </th>
             <th></th>
         </tr>
 
@@ -56,7 +56,6 @@
                     {
                         @Html.ActionLink("Edit", "Edit", new { id = item.Id }) @:|
             }
-
                     @Html.ActionLink("Details", "Details", new { id = item.Id })
                     @if (User.IsInRole("Administrators") || (item.Author != null && User.Identity.Name == item.Author.UserName))
                     {
