--- a/Blog -ASP.NET MVC Practical Project/Views/Users/Edit.cshtml
+++ b/Blog -ASP.NET MVC Practical Project/Views/Users/Edit.cshtml
@@ -4,7 +4,6 @@
     ViewBag.Title = "Edit";
 }
 <div class="newmain">
-    <h2>Edit</h2>
 
 
     @using (Html.BeginForm())
@@ -12,7 +11,7 @@
         @Html.AntiForgeryToken()
 
         <div class="form-horizontal">
-            <h4>ApplicationUser</h4>
+            <h4>Edit your Summoner Info</h4>
             <hr />
             @Html.ValidationSummary(true, "", new { @class = "text-danger" })
             @Html.HiddenFor(model => model.Id)
@@ -49,13 +48,13 @@
                 </div>
             </div>
 
-            <div class="form-group">
+            @*<div class="form-group">
                 @Html.LabelFor(model => model.Email, htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
                     @Html.EditorFor(model => model.Email, new { htmlAttributes = new { @class = "form-control" } })
                     @Html.ValidationMessageFor(model => model.Email, "", new { @class = "text-danger" })
                 </div>
-            </div>
+            </div>*@
 
             @*<div class="form-group">
                     @Html.LabelFor(model => model.EmailConfirmed, htmlAttributes: new { @class = "control-label col-md-2" })
