--- a/Blog -ASP.NET MVC Practical Project/Views/Shared/_Layout.cshtml
+++ b/Blog -ASP.NET MVC Practical Project/Views/Shared/_Layout.cshtml
@@ -25,6 +25,7 @@
                         <li class="alltext">@Html.ActionLink("Guides", "Index", "Posts")</li>
                         <li class="alltext">@Html.ActionLink("My Guides", "Index", "MyPosts")</li>
                         <li class="alltext">@Html.ActionLink("New Guide", "Create", "Posts")</li>
+                        <li class="alltext">@Html.ActionLink("Discuss", "Index", "Discuss")</li>
                         <li class="alltext">@Html.ActionLink("Summoners", "Index", "Users")</li>
                     </ul>
                     @Html.Partial("_LoginPartial")
