--- a/Blog -ASP.NET MVC Practical Project/Views/Discusses/Create.cshtml
+++ b/Blog -ASP.NET MVC Practical Project/Views/Discusses/Create.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Create";
 }
 <div class="newmain">
-    <h2>Create</h2>
+    <h2>Add new comment</h2>
 
 
     @using (Html.BeginForm())
