--- a/Blog -ASP.NET MVC Practical Project/Views/Forum/Index.cshtml
+++ b/Blog -ASP.NET MVC Practical Project/Views/Forum/Index.cshtml
@@ -46,9 +46,10 @@
             </td>
             <td>
                 @*@Html.DisplayFor(modelItem => item.Date)*@
-                Request a certain guide/opinion about a certain champion.
+                Request a guide about a certain champion/aspect.
             </td>
             <td>
+                @Html.ActionLink("Open", "Index", "Requests")
                 @*@Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
                     @Html.ActionLink("Details", "Details", new { id = item.Id }) |
                     @Html.ActionLink("Delete", "Delete", new { id = item.Id })*@
@@ -69,7 +70,15 @@
                     @Html.ActionLink("Details", "Details", new { id = item.Id }) |
                     @Html.ActionLink("Delete", "Delete", new { id = item.Id })*@
                 @*@Html.ActionLink("Open", "Create")*@
+                @Html.ActionLink("Open", "Index", "Questions")
             </td>
+            
+
+        </tr>
+        <tr>
+            <td>Offtopic</td>
+            <td>Is desribing Offtopic even possible?</td>
+            <td>@Html.ActionLink("Open", "Index", "Offtopic")</td>
         </tr>
 
 
