Some users and posts added

--- a/Blog -ASP.NET MVC Practical Project/Views/Forum/Index.cshtml
+++ b/Blog -ASP.NET MVC Practical Project/Views/Forum/Index.cshtml
@@ -78,7 +78,7 @@
         <tr>
             <td>Offtopic</td>
             <td>Is desribing Offtopic even possible?</td>
-            <td>@Html.ActionLink("Open", "Index", "Offtopic")</td>
+            <td>@Html.ActionLink("Open", "Index", "Offtopics")</td>
         </tr>
 
 
