--- a/Blog -ASP.NET MVC Practical Project/Views/Offtopics/Delete.cshtml
+++ b/Blog -ASP.NET MVC Practical Project/Views/Offtopics/Delete.cshtml
@@ -3,9 +3,7 @@
 @{
     ViewBag.Title = "Delete";
 }
-
-<h2>Delete</h2>
-
+<div class="newmain">
 <h3>Are you sure you want to delete this?</h3>
 <div>
     <h4>Offtopic</h4>
@@ -38,3 +36,4 @@
         </div>
     }
 </div>
+    </div>
